<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTransparentBue"
    android:orientation="vertical"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="4dp"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparentBue"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rv_tvtitle"
            style="@style/recyclerview_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rv_taskTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:layout_toStartOf="@id/rv_imgvEdit"
            android:layout_alignParentEnd="false"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/rv_imgvEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingTop="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_edit_weirdblue_24dp"
            android:contentDescription="@string/rv_imgvEdit_content_desc" />

        <TextView
            android:id="@+id/rv_tvdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rv_taskDesc"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:layout_below="@id/rv_tvtitle"
            style="@style/recyclerview_tv"

            />
    </RelativeLayout>

</androidx.cardview.widget.CardView>